fix for non-dark mode

--- a/public/custom.css
+++ b/public/custom.css
@@ -1,3 +1,5 @@
-body {
-  background-color: #01242e;
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #01242e;
+  }
 }
